# O-Serialize

./: CMakeLists.txt  README.md
include/o_serialize/: base.h  ini.h  json.h  o_serialize.h  xml.h
src/: o_serialize.cpp
tests/: CMakeLists.txt  main.cpp  qt_test.h  stl_test.h
